# Software-Testing

./: .gitignore  README.md
lab1/: functions.py  pom.xml  ТПО P3312 Балин Кобелев Лаб1.docx
lab1/src/test/java/itmo/st/: GalaxyCreationTest.java  GalaxyTest.java  MathTest.java  MathUtilsTest.java  RBTreeTest.java
lab2/: 1.py  README.MD  pom.xml  ТПО P3312 Балин Кобелев Лаб2.docx
lab2/src/main/java/itmo/st/: Main.java
lab2/src/test/resources/dataset/: SystemInvalidTest.csv  SystemValidTest.csv  cosTestDataset.csv  cotTestDataset.csv  cscTest.csv  invalidLnTest.csv  invalidLogTest.csv  lnTestDataset.csv  logTest.csv  secTest.csv  sinTestDataset.csv  tanTest.csv
lab3/: README.md  lab.py  main.py  pom.xml  pyproject.toml
lab3/old/: lab.py
lab3/src/main/java/itmo/bonga/: BaseBongaTest.java  BongacamsTest.java  ChpokiBongaTest.java  DriverManager.java  EnteringBongacamsTest.java  Main.java
lab3/src/test/java/itmo/bonga/: BaseTest.java  FullLoginTest.java  LoginTest.java  PageObjectLoginTest.java
lab3/src/test/java/itmo/bonga/pages/: LoginPage.java  MailRuHomePage.java  MailboxPage.java
lab3/tests/: test_base.py  test_categories.py  test_driver.py  test_entering.py
lab4/load/: lab4Load.jmx  report.csv
lab4/load/data/: conf1-rtg.csv  conf2-rtg.csv  conf3-rtg.csv
lab4/stress/: lab4Stress.jmx  report.csv
lab4/stress/data/: 15-results.csv  20-results.csv  25-results.csv  30-results.csv
software-testing-1/src/: Main.java
software-testing-1/src/com/itmo/: MathUtils.java
software-testing-1/src/test/: ArccosTest.java
(+16 files in other folders)
