[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["Romariok <ronya-ko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.31.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
